<resources>
    <string name="map_api_key">AIzaSyAfk3kKTJ71lQfUsbwH_qlfN5Ylclr4b3s</string>
    <string name="app_name">RACP</string>
    <string name="no_internet">कृपया इंटरनेट कनेक्शन चेक करेंं </string>
    <string name="login_title"> पशुधन गतिविधियों की निगरानी के लिए ऐप्प का उपयोग करेंं  </string>
    <string name="submit">सत्यापित करेंं</string>
    <string name="otp">ओ टी पी डालें </string>
    <string name="invalid_otp">ओ टी पी गलत है </string>
    <string name="enter_otp">ओ टी पी यहाँ लिखें </string>
    <string name="enter_number">मोबाइल नंबर यहाँ लिखें </string>
    <string name="number">रजिस्टर्ड  मोबाइल नंबर डालें </string>
    <string name="splash_txt">राजस्थान एग्रीकल्चर कम्पेटिटिवेनेस्स प्रोजेक्ट</string>
    <string name="record2">रिकॉर्ड : </string>
    <string name="report">रिपोर्ट</string>
    <string name="tag_no"> टैग नंबर</string>
    <string name="physical_date">भौतिक सत्यापन दिनांक </string>
    <string name="date">दिनांक :  </string>
    <string name="immunization"> टीकाकरण </string>
    <string name="start_year">चालू वर्ष में</string>
    <string name="name_disease">बीमारी का नाम</string>
    <string name="linsurence_time">बीमा अवधि</string>
    <string name="note">टिप्पणी</string>
    <string name="add_record">नया रिकॉर्ड जोड़े</string>
    <string name="save">जमा करेंं </string>
    <string name="list_goat">वितरित बकरो का विवरण</string>
    <string name="add_animal_owner">ऐड पशुपालक</string>
    <string name="add_mtggroup">ऐड एमटीजी ग्रुप</string>
    <string name="dashboard">RACP LLW डैशबोर्ड</string>
    <string name="animal_owner_list">ऐड पशु पालक वितरण</string>
    <string name="add_info">नोटिफिकेशन</string>
    <string name="formar_name">किसान का नाम</string>
    <string name="father_name">पिता / पति का नाम</string>
    <string name="mobile_number">मोबाइल नंबर</string>
    <string name="search_list">सूची खोजें</string>
    <string name="from">से</string>
    <string name="to">तक</string>
    <string name="fill_form">प्रपत्र भरेंं</string>
    <string name="save_list">जमा विवरण</string>
    <string name="search">खोजें</string>
    <string name="filled_from">भरा हुआ प्रपत्र</string>
    <string name="tag_no_bakari">बकरी का टैग नंबर</string>
    <string name="tag_no_bakara">बकरे का टैग नंबर</string>
    <string name="age">उम्र माह में</string>
    <string name="average_milk_time">औसत दूग्ध उत्पादन प्रतिदिन (लीटर में)</string>
    <string name="nasl">नस्ल</string>
    <string name="physical_proof">भौतिक सत्यापन है या नहीं?  </string>
    <string name="in_use_or_not">उपयोग में आ रहा है या नहीं?  </string>
    <string name="yes">हाँ</string>
    <string name="no">नहीं</string>
    <string name="dana_pani_bartan">दाना पानी बर्तन</string>
    <string name="kutti_machine">कुट्टी मशीन</string>
    <string name="ausat_utpadan_matra">औसत दूग्ध उत्पादन मात्रा प्रतिदिन (लीटर में) </string>
    <string name="upyog">उपयोग</string>
    <string name="bakari">बकरी</string>
    <string name="cow">गाय</string>
    <string name="bhais">भैंस</string>
    <string name="before_ajola">अजोला से पूर्व</string>
    <string name="amount_milk_before_ajola">दुग्ध मात्रा (अजोला से पूर्व) (लीटर में)</string>
    <string name="amount_milk_after_ajola">दुग्ध मात्रा (अजोला के पश्चात) (लीटर में)</string>
    <string name="fait_percent_before">फैट प्रतिशत (अजोला से पूर्व)</string>
    <string name="fait_percent_after">फैट प्रतिशत (अजोला के पश्चात)</string>
    <string name="after_ajola">अजोला के पश्चात</string>
    <string name="gram_panchayat">ग्राम पंचायत</string>
    <string name="village">ग्राम</string>
    <string name="mtg_group">एमटीजी ग्रुप</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="logout">LogOut</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="something_went_wrong">Somthing went wrong</string>
    <string name="selcet_mtg_group">एमटीजी ग्रुप चुनें  </string>
    <string name="search_mtg_group">एमटीजी ग्रुप खोजें </string>
    <string name="selcet_mtg_person">एमटीजी सदस्य चुनें (पशु पालक)</string>
    <string name="search_mtg_person">एमटीजी सदस्य खोजें (पशु पालक)</string>
    <string name="bakra">बकरा</string>
    <string name="Update">हाँ</string>
    <string name="not_now">अभी नहीं</string>
    <string name="shivir_place">शिविर स्थल</string>
    <string name="shivir_date">पशुचिकित्सा शिविर आयोजक दिनांक</string>
    <string name="count_animal_owner">उपस्थित पशुपालको की संख्या</string>
    <string name="animal_count">चिकित्सा किये गये पशुओ की संख्या</string>
    <string name="big">बड़े</string>
    <string name="small">छोटे</string>
    <string name="biomadicel_best_disposel">बायोमेडिकल कचरा निपटान के लिए उपलब्धता</string>
    <string name="mtg_name">एमटीजी का नाम</string>
    <string name="prasikshan_date">प्रशिक्षण दिनांक</string>
    <string name="count_prasiksharthi">प्रशिक्षार्थी की संख्या</string>
    <string name="peoples_name">उपस्थित सदस्यों के नाम</string>
    <string name="activity">गतिविधि</string>
    <string name="detail_pashupakal">एडॉप्शन करने वाले पशुपालक का </string>
    <string name="name">नाम</string>
    <string name="address">पता</string>
    <string name="mobile">मोबाइल नंबर</string>
    <string name="signature">हस्ताक्षर जिला समन्वयक / स्थानीय पशुचिकित्सक</string>
    <string name="feedsupplymentinfo">फीड सप्लीमेंट प्रदान किये पशु की सूचना</string>
    <string name="start_weight">प्रारम्भ में वजन (किलो ग्राम में)</string>
    <string name="feed_suppliment_amount">फीड सप्लीमेंट मात्रा प्रतिदिन</string>
    <string name="feed_suppliment_start_date">फीड सप्लीमेंट प्रारम्भ करने की दिनांक</string>
    <string name="after_90day">प्रारम्भ करने की दिनांक से 90 दिन की दिनांक</string>
    <string name="effect_present">फीड सप्लीमेंट का प्रभाव (वर्तमान में)</string>
    <string name="health">पशु स्वास्थ</string>
    <string name="memna">मेमना</string>
    <string name="reajent_availability">रीएजेन्ट की उपलब्धता</string>
    <string name="test_Date">टेस्ट की दिनांक</string>
    <string name="deases_every_year">थनैला रोग की दर प्रति पशु प्रति वर्ष</string>
    <string name="before_use_milkkit">क्लीन मिल्क किट के उपयोग से पूर्व</string>
    <string name="after_use_milkkit">क्लीन मिल्क किट के उपयोग के पश्चात</string>
    <string name="before_rotation">रोटेशन के पूर्व स्थिति</string>
    <string name="animal_owner_name">पशुपालक का नाम</string>
    <string name="mtgname_and_ownerAddress">एमटीजी का नाम </string>
    <string name="weight">भार (किलो ग्राम में)</string>
    <string name="milk_produciton">दुग्ध उत्पादन (लीटर में)</string>
    <string name="immunization_date">टीकाकरण की दिनांक</string>
    <string name="name_teeka">टीके का नाम</string>
    <string name="ppr">पी.पी.आर</string>
    <string name="et">ई.टी.</string>
    <string name="fmd">एफ.एम.डी.</string>
    <string name="hs">एच.एस.</string>
    <string name="animal_type">पशु प्रकार</string>
    <string name="insurence_time">बीमा अवधि दिनांक</string>
    <string name="death_condition">मृत्यु की स्थिति चुनें</string>
    <string name="and_count">एवं संख्या</string>
    <string name="claim">क्लेम प्राप्ति की स्थिति</string>
    <string name="santati">संतति</string>
    <string name="nar">नर</string>
    <string name="mada">मादा</string>
    <string name="form_1">R.A.C.P.के अंतर्गत वितरित बकरो का विवरण</string>
    <string name="form_2">R.A.C.P. अंतर्गत बकरा विवरण के लाभार्थी M. T. G. सदस्यों के पास उपलब्ध बकरियों का विवरण</string>
    <string name="form_3">R.A.C.P. के अंतर्गत विधवा / विकलांग महिला को वितरित बकरी का विवरण</string>
    <string name="form_4">बकरा / बकरी के बीमा का विवरण </string>
    <string name="form_5">विपणन तालिका (M.T.G. सदस्यों के अतिरिक्त बकरी पालको हेतु) </string>
    <string name="form_6">भार तोलने की मशीन</string>
    <string name="form_7">क्लीन मिल्क किट</string>
    <string name="form_8">कुट्टी मशीन</string>
    <string name="form_9">दाना पानी बर्तन</string>
    <string name="form_10">अजोला</string>
    <string name="form_11">फीड सप्लीमेंट</string>
    <string name="form_12">बकरी आवास</string>
    <string name="form_13">बेचने योग्य बकरा / बकरी का विवरण (३ माह से अधिक उम्र के) </string>
    <string name="form_14">पशुचिकित्सा शिविर</string>
    <string name="form_15">M.T.G. प्रशिक्षण</string>
    <string name="form_16">M.T.G. बैठक</string>
    <string name="form_17">एडॉप्शन </string>
    <string name="form_18">बकरा रोटेशन</string>
    <string name="result_after_test">थनैला रोग रिजल्ट</string>
    <string name="possitive">पॉजिटिव</string>
    <string name="negative">नेगेटिव</string>
    <string name="after_rotation">रोटेशन के पश्चात स्थिति</string>
    <string name="year">साल</string>
    <string name="month">माह</string>
    <string name="month1">प्रथम माह </string>
    <string name="month2">द्वितीय माह </string>
    <string name="month3">तृतीय माह </string>
    <string name="bakara_bakari">बेचने योग्य बकरा / बकरी</string>
    <string name="previous"> पिछला रिकॉर्ड</string>
    <string name="next">अगला रिकॉर्ड</string>
    <string name="invalid_no">गलत मोबाइल नंबर</string>
    <string name="empty_field">यह स्थान भरेंं</string>
    <string name="pashu_palak_ctg">पशुपालक केटेगरी</string>
    <string name="ok">ओके</string>
    <string name="jamnapari">जमनापारी</string>
    <string name="sirohi">सिरोही</string>
    <string name="marwadi">मारवाड़ी</string>
    <string name="desi">देशी</string>
    <string name="should_not_empty">कोई भी स्थान खाली नहीं हो सकता</string>
    <string name="fill_this_field">कृपया यह स्थान भरेंं</string>
    <string name="please_fill_tagNo">कृपया यह टैग नंबर भरेंं</string>
    <string name="enter_average_milk_production">कृपया औसत दुग्ध उत्पादन प्रतिदिन भरेंं</string>
    <string name="enter_physical_proof_date">भौतिक सत्यापन दिनांक चुनें</string>
    <string name="enter_dateppr">पी पी आर दिनांक चुनें</string>
    <string name="beema_detail">पॉलिसी विवरण</string>
    <string name="policy_no">बीमा पॉलिसी नंबर</string>
    <string name="pashu_palak_unit">पशुपालक श्रेणी</string>
    <string name="select_animal_category">पशु श्रेणी चुनें</string>
    <string name="vidhansabha">विधानसभा क्षेत्र</string>
    <string name="tehsil">तहसील</string>
    <string name="prasikshan_place">प्रशिक्षण स्थान</string>
    <string name="visiting_date">LLW विजिटिंग दिनांक</string>
    <string name="prapti_date">प्राप्ति की </string>
    <string name="date_construction">बकरी आवास निर्माण की दिनांक</string>
    <string name="date_death">मृत्यु की तिथि</string>
    <string name="panding">अपूर्ण</string>
    <string name="gender">लिंग</string>
    <string name="identification_type">पहचान प्रकार</string>
    <string name="identification_no">पहचान संख्या</string>
    <string name="former_type">किसान प्रकार</string>
    <string name="close">बंद करेंं </string>
    <string name="addmore">जोड़ें</string>
    <string name="select_date_first">कृपया पहले दिनांक चुनें</string>
    <string name="availornot">प्राप्त हुआ या नहीं ?</string>
    <string name="date_receipt">प्राप्ति की दिनांक </string>
    <string name="day">दिन</string>
    <string name="list_submitted_from">जमा किये गए फॉर्म की सूची</string>
    <string name="invalid_Date">दिनांक अमान्य</string>
    <string name="select_nasl">नस्ल चुनें</string>
    <string name="select_form_type">कृपया फॉर्म प्रकार चुनें</string>
    <string name="alert">सतर्क</string>
</resources>