<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:gravity="center"
    android:padding="40dp"
    android:orientation="vertical"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/availornot"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <RadioGroup
        android:layout_marginTop="10dp"
        android:id="@+id/radio"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:id="@+id/yes"
            android:text="@string/yes"
            android:textSize="@dimen/tv_size_medium_tab"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
        <RadioButton
            android:id="@+id/no"
            android:textSize="@dimen/tv_size_medium_tab"
            android:text="@string/no"
            android:layout_weight="1"
            android:layout_width="0dp"
            android:layout_height="match_parent" />
    </RadioGroup>

    <TextView
        android:text="@string/date_receipt"
        android:textColor="@color/black"
        android:textSize="25dp"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />





</LinearLayout>