<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="40dp"
    android:background="@color/colorPrimary"
    app:cardCornerRadius="5dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:id="@+id/dialog1_title"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/alert"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/dialog1_msg"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:inputType="textMultiLine"
            android:maxLines="3"
            android:gravity="center"
            android:text="@string/select_form_type"
            android:textColor="@color/white"
            android:textSize="18dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@color/white"
            android:gravity="center">

            <TextView
                android:id="@+id/dialog1_ok"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_toRightOf="@+id/viewad"
                android:gravity="center"
                android:text="@string/ok"
                android:textSize="18dp" />

        </RelativeLayout>


    </LinearLayout>

</android.support.v7.widget.CardView>

