<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        tools:context=".ui.Form.pashu_chiktsak_shivir.PahsuChikitsha">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbarThumbVertical="@null"
            android:scrollIndicators="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txt"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentTop="true"
                    android:text="@string/record2"
                    android:textColor="@color/black"
                    android:textSize="@dimen/login_title_size" />

                <TextView
                    android:id="@+id/txtno"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_toRightOf="@+id/txt"
                    android:textColor="@color/black"
                    android:textSize="@dimen/login_title_size" />


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_toLeftOf="@+id/tv_date"
                    android:textColor="@color/black"
                    android:text="@string/date"
                    android:textSize="@dimen/login_title_size" />


                <TextView
                    android:id="@+id/tv_date"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentRight="true"
                    android:textColor="@color/black"
                    android:textSize="@dimen/login_title_size" />







                <LinearLayout
                    android:id="@+id/linear_layout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_below="@+id/txt"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edit_theme"
                    android:orientation="vertical"
                    android:layout_marginBottom="15dp"
                    android:padding="20dp">


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:text="@string/shivir_place"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tv_size_medium_tab" />

                    <EditText
                        android:id="@+id/edt_place"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:inputType="textPostalAddress"
                        android:background="@drawable/edit_theme_black"
                        android:paddingHorizontal="10dp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:text="@string/shivir_date"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tv_size_medium_tab" />

                    <TextView
                        android:id="@+id/edt_date"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tv_size_medium_tab"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edit_theme_black"
                        android:drawableRight="@drawable/calendar"
                        android:paddingHorizontal="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:text="@string/count_animal_owner"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tv_size_medium_tab" />

                    <EditText
                        android:id="@+id/edt_count"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginTop="10dp"
                        android:textColor="@color/black"
                        android:background="@drawable/edit_theme_black"
                        android:paddingHorizontal="10dp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="20dp"
                        android:gravity="center"
                        android:text="@string/animal_count"
                        android:textColor="@color/colorPrimary"
                        android:textSize="22dp"
                        android:textStyle="bold" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/big"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tv_size_medium_tab"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edt_big"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:textColor="@color/black"
                        android:background="@drawable/edit_theme_black"
                        android:paddingHorizontal="10dp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="15dp"
                        android:layout_marginRight="20dp"
                        android:text="@string/small"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tv_size_medium_tab"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/edt_small"
                        android:inputType="number"
                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_marginLeft="20dp"
                        android:layout_marginTop="10dp"
                        android:layout_marginRight="20dp"
                        android:textColor="@color/black"
                        android:background="@drawable/edit_theme_black"
                        android:paddingHorizontal="10dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:text="@string/biomadicel_best_disposel"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tv_size_medium_tab" />
                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="35dp"
                        android:layout_below="@+id/tv_phy_proof"
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal"
                        android:weightSum="2">


                        <CheckBox
                            android:id="@+id/check_available_yes"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/yes"
                            android:textColor="@color/black"
                            android:textSize="@dimen/tv_size_medium_tab" />


                        <CheckBox
                            android:id="@+id/check_available_no"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:text="@string/no"
                            android:textColor="@color/black"
                            android:textSize="@dimen/tv_size_medium_tab" />


                    </LinearLayout>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="15dp"
                        android:text="@string/note"
                        android:textColor="@color/black"
                        android:textSize="@dimen/tv_size_medium_tab" />

                    <EditText
                        android:id="@+id/edt_note"
                        android:layout_width="match_parent"
                        android:layout_height="120dp"
                        android:inputType="textMultiLine"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/edit_theme_black"
                        android:gravity="start"
                        android:textColor="@color/black"
                        android:padding="10dp" />

                </LinearLayout>


                <TextView
                    android:id="@+id/next"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear_layout"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    android:text="@string/next"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    android:layout_marginBottom="15dp"
                    android:drawableRight="@drawable/_next"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/privious"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linear_layout"
                    android:layout_alignParentLeft="true"
                    android:padding="10dp"
                    android:layout_marginBottom="15dp"
                    android:text="@string/previous"
                    android:textColor="@color/colorPrimary"
                    android:textSize="20dp"
                    android:visibility="gone"
                    android:drawableLeft="@drawable/_privious"/>

                <LinearLayout
                    android:id="@+id/tv_addRecord"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/linear_layout"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="50dp"
                    android:layout_toLeftOf="@+id/view1"
                    android:background="@drawable/button_theme"
                    android:backgroundTint="@android:color/black"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center_vertical"
                        android:src="@drawable/addmore" />

                    <TextView

                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:paddingLeft="20dp"
                        android:text="@string/add_record"
                        android:textColor="@android:color/white" />


                </LinearLayout>


                <View
                    android:id="@+id/view1"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_centerHorizontal="true" />

                <TextView
                    android:id="@+id/tv_save"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_below="@+id/linear_layout"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="50dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginBottom="50dp"
                    android:layout_toRightOf="@+id/view1"
                    android:background="@drawable/button_theme"
                    android:gravity="center"
                    android:text="@string/save"
                    android:textColor="@android:color/white" />

            </RelativeLayout>


        </ScrollView>
    </RelativeLayout>
</layout>