<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="match_parent">

    <TextView
        android:text="@string/animal_type"
        android:gravity="center_vertical"
        android:textSize="@dimen/tv_size_medium_tab"
        android:textColor="@color/black"
        android:background="@drawable/edit_theme_black"
        android:layout_toLeftOf="@+id/mview"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingHorizontal="10dp"/>

    <TextView
        android:id="@+id/animel_type"
        android:text="@string/animal_type"
        android:gravity="center_vertical"
        android:textSize="@dimen/tv_size_medium_tab"
        android:textColor="@color/black"
        android:background="@drawable/edit_theme_black"
        android:layout_toRightOf="@+id/mview"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingHorizontal="10dp"/>

    <TextView
        android:text="@string/tag_no"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:textSize="@dimen/tv_size_medium_tab"
        android:textColor="@color/black"
        android:background="@drawable/edit_theme_black"
        android:layout_toLeftOf="@+id/mview"
        android:layout_below="@+id/animel_type"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingHorizontal="10dp"/>

    <TextView
        android:id="@+id/tagno"
        android:layout_below="@+id/animel_type"
        android:layout_marginTop="15dp"
        android:text="@string/tag_no"
        android:gravity="center_vertical"
        android:textSize="@dimen/tv_size_medium_tab"
        android:textColor="@color/black"
        android:background="@drawable/edit_theme_black"
        android:layout_toRightOf="@+id/mview"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingHorizontal="10dp"/>

    <TextView
        android:text="@string/age"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:textSize="@dimen/tv_size_medium_tab"
        android:textColor="@color/black"
        android:background="@drawable/edit_theme_black"
        android:layout_toLeftOf="@+id/mview"
        android:layout_below="@+id/tagno"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingHorizontal="10dp"/>

    <TextView
        android:id="@+id/age"
        android:layout_below="@+id/tagno"
        android:layout_marginTop="15dp"
        android:text="@string/age"
        android:gravity="center_vertical"
        android:textSize="@dimen/tv_size_medium_tab"
        android:textColor="@color/black"
        android:background="@drawable/edit_theme_black"
        android:layout_toRightOf="@+id/mview"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingHorizontal="10dp"/>

    <TextView
        android:text="@string/weight"
        android:layout_marginTop="15dp"
        android:gravity="center_vertical"
        android:textSize="@dimen/tv_size_medium_tab"
        android:textColor="@color/black"
        android:background="@drawable/edit_theme_black"
        android:layout_toLeftOf="@+id/mview"
        android:layout_below="@+id/age"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingHorizontal="10dp"/>

    <TextView
        android:id="@+id/weight"
        android:layout_below="@+id/age"
        android:layout_marginTop="15dp"
        android:text="@string/weight"
        android:gravity="center_vertical"
        android:textSize="@dimen/tv_size_medium_tab"
        android:textColor="@color/black"
        android:background="@drawable/edit_theme_black"
        android:layout_toRightOf="@+id/mview"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:paddingHorizontal="10dp"/>

    <TextView
        android:id="@+id/immunization"
        android:text="@string/immunization"
        android:textSize="@dimen/tv_size_medium_tab"
        android:textColor="@color/colorPrimary"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/weight"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <android.support.v7.widget.RecyclerView
        android:layout_below="@+id/immunization"
        android:id="@+id/rv_immunization"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </android.support.v7.widget.RecyclerView>


    <View
        android:id="@+id/mview"
        android:layout_centerHorizontal="true"
        android:layout_width="20dp"
        android:layout_height="0dp"/>
</RelativeLayout>